[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["icecream>=2.1.3", "jinja2>=3.1.4"]
docs = [
  "mdx-truly-sane-lists>=1.3",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-git-committers-plugin-2>=2.4.1",
  "mkdocs-git-revision-date-localized-plugin>=1.3.0",
  "mkdocs-literate-nav>=0.6.1",
  "mkdocs-material[imaging]>=9.5.44",
  "mkdocs-section-index>=0.3.9",
  "mkdocs>=1.6.1",
  "mkdocstrings[python]>=0.27.0",
  "pymdown-extensions>=10.12",
]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = [
  "beartype>=0.19.0",
  "jaxtyping>=0.2.36",
  "lazy-loader>=0.4",
  "numpy>=2.1.3",
]
description = "Add your description here"
name = "array-typing"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.optional-dependencies]
jax = ["jax>=0.4.35"]
torch = ["torch>=2.5.1"]

[tool.uv]
default-groups = ["dev", "docs"]
